Add PermSize for Java 7